# nvidia_stock_analysis

./: .gitignore  README.md  app.py  nvidia_stock_analysis.code-workspace  pyproject.toml
src/: agents.py  data_loader.py  indicators.py  predictor.py  scraper.py  sentiment.py
