[project]
name = "nvidia_stock_analysis"
version = "0.1.0"
description = "Data Science Project"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "yfinance>=0.2.66",
    "bs4>=0.0.2",
    "requests>=2.32.5",
    "datetime>=6.0",
    "lxml>=6.0.2",
    "nltk>=3.9.2",
    "plotly>=6.5.0",
    "streamlit>=1.52.1",
    "textblob>=0.19.0",
    "wordcloud>=1.9.4",
    "statsmodels>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
